# serializer version: 1
# name: test_exchanges[None]
  list([
    dict({
      'datetime': datetime.datetime(2025, 1, 13, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 13, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -55.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -50.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -44.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -50.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -50.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -52.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -36.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -40.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -48.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -60.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -70.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -62.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -62.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -62.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -66.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -63.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -64.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -58.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 14, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -48.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -44.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -42.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -40.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -40.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -38.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -38.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -38.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -42.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -48.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -50.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -50.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -60.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -62.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -58.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -62.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -58.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -60.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -58.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -58.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 15, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_exchanges[target_datetime1]
  list([
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -44.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -42.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -40.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -38.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -38.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -40.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -40.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -42.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -42.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -50.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -58.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -62.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -58.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -58.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -56.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -54.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -52.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -50.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
    dict({
      'datetime': datetime.datetime(2025, 1, 1, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'netFlow': -48.0,
      'sortedZoneKeys': 'BD->IN-NE',
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
    }),
  ])
# ---
# name: test_fetch_consumption[None]
  list([
    dict({
      'consumption': 9480.0,
      'datetime': datetime.datetime(2025, 1, 13, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9093.0,
      'datetime': datetime.datetime(2025, 1, 13, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8508.0,
      'datetime': datetime.datetime(2025, 1, 14, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8069.0,
      'datetime': datetime.datetime(2025, 1, 14, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7674.0,
      'datetime': datetime.datetime(2025, 1, 14, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7517.0,
      'datetime': datetime.datetime(2025, 1, 14, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7469.0,
      'datetime': datetime.datetime(2025, 1, 14, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7854.0,
      'datetime': datetime.datetime(2025, 1, 14, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8664.0,
      'datetime': datetime.datetime(2025, 1, 14, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9358.0,
      'datetime': datetime.datetime(2025, 1, 14, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9854.0,
      'datetime': datetime.datetime(2025, 1, 14, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9675.0,
      'datetime': datetime.datetime(2025, 1, 14, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9710.0,
      'datetime': datetime.datetime(2025, 1, 14, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10242.0,
      'datetime': datetime.datetime(2025, 1, 14, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10465.0,
      'datetime': datetime.datetime(2025, 1, 14, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10210.0,
      'datetime': datetime.datetime(2025, 1, 14, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9740.0,
      'datetime': datetime.datetime(2025, 1, 14, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9513.0,
      'datetime': datetime.datetime(2025, 1, 14, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9714.0,
      'datetime': datetime.datetime(2025, 1, 14, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10701.0,
      'datetime': datetime.datetime(2025, 1, 14, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10901.0,
      'datetime': datetime.datetime(2025, 1, 14, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10772.0,
      'datetime': datetime.datetime(2025, 1, 14, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10725.0,
      'datetime': datetime.datetime(2025, 1, 14, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10458.0,
      'datetime': datetime.datetime(2025, 1, 14, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10125.0,
      'datetime': datetime.datetime(2025, 1, 14, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9427.0,
      'datetime': datetime.datetime(2025, 1, 14, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8966.0,
      'datetime': datetime.datetime(2025, 1, 14, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8415.0,
      'datetime': datetime.datetime(2025, 1, 15, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7967.0,
      'datetime': datetime.datetime(2025, 1, 15, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7687.0,
      'datetime': datetime.datetime(2025, 1, 15, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7426.0,
      'datetime': datetime.datetime(2025, 1, 15, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7365.0,
      'datetime': datetime.datetime(2025, 1, 15, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7908.0,
      'datetime': datetime.datetime(2025, 1, 15, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8542.0,
      'datetime': datetime.datetime(2025, 1, 15, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9363.0,
      'datetime': datetime.datetime(2025, 1, 15, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9682.0,
      'datetime': datetime.datetime(2025, 1, 15, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9496.0,
      'datetime': datetime.datetime(2025, 1, 15, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9576.0,
      'datetime': datetime.datetime(2025, 1, 15, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10149.0,
      'datetime': datetime.datetime(2025, 1, 15, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10434.0,
      'datetime': datetime.datetime(2025, 1, 15, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10046.0,
      'datetime': datetime.datetime(2025, 1, 15, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9788.0,
      'datetime': datetime.datetime(2025, 1, 15, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9347.0,
      'datetime': datetime.datetime(2025, 1, 15, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9468.0,
      'datetime': datetime.datetime(2025, 1, 15, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10577.0,
      'datetime': datetime.datetime(2025, 1, 15, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10893.0,
      'datetime': datetime.datetime(2025, 1, 15, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10879.0,
      'datetime': datetime.datetime(2025, 1, 15, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10769.0,
      'datetime': datetime.datetime(2025, 1, 15, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10658.0,
      'datetime': datetime.datetime(2025, 1, 15, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10054.0,
      'datetime': datetime.datetime(2025, 1, 15, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9529.0,
      'datetime': datetime.datetime(2025, 1, 15, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
  ])
# ---
# name: test_fetch_consumption[target_datetime1]
  list([
    dict({
      'consumption': 8104.0,
      'datetime': datetime.datetime(2025, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7669.0,
      'datetime': datetime.datetime(2025, 1, 1, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7351.0,
      'datetime': datetime.datetime(2025, 1, 1, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7082.0,
      'datetime': datetime.datetime(2025, 1, 1, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 6952.0,
      'datetime': datetime.datetime(2025, 1, 1, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 7382.0,
      'datetime': datetime.datetime(2025, 1, 1, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8038.0,
      'datetime': datetime.datetime(2025, 1, 1, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8896.0,
      'datetime': datetime.datetime(2025, 1, 1, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9335.0,
      'datetime': datetime.datetime(2025, 1, 1, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9048.0,
      'datetime': datetime.datetime(2025, 1, 1, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9272.0,
      'datetime': datetime.datetime(2025, 1, 1, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9764.0,
      'datetime': datetime.datetime(2025, 1, 1, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10087.0,
      'datetime': datetime.datetime(2025, 1, 1, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9531.0,
      'datetime': datetime.datetime(2025, 1, 1, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9201.0,
      'datetime': datetime.datetime(2025, 1, 1, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8829.0,
      'datetime': datetime.datetime(2025, 1, 1, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9175.0,
      'datetime': datetime.datetime(2025, 1, 1, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10336.0,
      'datetime': datetime.datetime(2025, 1, 1, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10118.0,
      'datetime': datetime.datetime(2025, 1, 1, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 10107.0,
      'datetime': datetime.datetime(2025, 1, 1, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9970.0,
      'datetime': datetime.datetime(2025, 1, 1, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9829.0,
      'datetime': datetime.datetime(2025, 1, 1, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 9430.0,
      'datetime': datetime.datetime(2025, 1, 1, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8898.0,
      'datetime': datetime.datetime(2025, 1, 1, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
    dict({
      'consumption': 8514.0,
      'datetime': datetime.datetime(2025, 1, 1, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'zoneKey': 'BD',
    }),
  ])
# ---
# name: test_fetch_production[None]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 13, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3483.0,
        'gas': 3932.0,
        'hydro': 40.0,
        'oil': 306.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 0.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 13, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3368.0,
        'gas': 3831.0,
        'hydro': 40.0,
        'oil': 177.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 0.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2993.0,
        'gas': 3821.0,
        'hydro': 40.0,
        'oil': 79.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 0.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2863.0,
        'gas': 3821.0,
        'hydro': 40.0,
        'oil': 52.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 5.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2586.0,
        'gas': 3851.0,
        'hydro': 40.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 12.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2489.0,
        'gas': 3885.0,
        'hydro': 40.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 9.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2488.0,
        'gas': 3833.0,
        'hydro': 40.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 13.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2582.0,
        'gas': 4007.0,
        'hydro': 40.0,
        'oil': 13.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 12.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2891.0,
        'gas': 4066.0,
        'hydro': 40.0,
        'oil': 132.0,
        'solar': 6.0,
        'unknown': 0.0,
        'wind': 27.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3353.0,
        'gas': 4007.0,
        'hydro': 40.0,
        'oil': 302.0,
        'solar': 101.0,
        'unknown': 0.0,
        'wind': 28.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3430.0,
        'gas': 3963.0,
        'hydro': 40.0,
        'oil': 450.0,
        'solar': 245.0,
        'unknown': 0.0,
        'wind': 13.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3136.0,
        'gas': 3912.0,
        'hydro': 40.0,
        'oil': 456.0,
        'solar': 374.0,
        'unknown': 0.0,
        'wind': 9.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3123.0,
        'gas': 3848.0,
        'hydro': 40.0,
        'oil': 492.0,
        'solar': 448.0,
        'unknown': 0.0,
        'wind': 10.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3280.0,
        'gas': 4142.0,
        'hydro': 40.0,
        'oil': 565.0,
        'solar': 472.0,
        'unknown': 0.0,
        'wind': 14.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3300.0,
        'gas': 4407.0,
        'hydro': 40.0,
        'oil': 570.0,
        'solar': 454.0,
        'unknown': 0.0,
        'wind': 15.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3183.0,
        'gas': 4435.0,
        'hydro': 40.0,
        'oil': 523.0,
        'solar': 405.0,
        'unknown': 0.0,
        'wind': 41.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2988.0,
        'gas': 4293.0,
        'hydro': 40.0,
        'oil': 508.0,
        'solar': 298.0,
        'unknown': 0.0,
        'wind': 40.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2974.0,
        'gas': 4287.0,
        'hydro': 40.0,
        'oil': 510.0,
        'solar': 150.0,
        'unknown': 0.0,
        'wind': 29.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3083.0,
        'gas': 4455.0,
        'hydro': 40.0,
        'oil': 564.0,
        'solar': 27.0,
        'unknown': 0.0,
        'wind': 18.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3328.0,
        'gas': 4684.0,
        'hydro': 40.0,
        'oil': 1020.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 16.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3591.0,
        'gas': 4823.0,
        'hydro': 40.0,
        'oil': 718.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 17.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3496.0,
        'gas': 4887.0,
        'hydro': 40.0,
        'oil': 603.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 19.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3473.0,
        'gas': 4885.0,
        'hydro': 40.0,
        'oil': 586.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 14.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3349.0,
        'gas': 4866.0,
        'hydro': 40.0,
        'oil': 515.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 20.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3319.0,
        'gas': 4839.0,
        'hydro': 40.0,
        'oil': 288.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 30.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2939.0,
        'gas': 4845.0,
        'hydro': 40.0,
        'oil': 140.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 39.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 14, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2692.0,
        'gas': 4692.0,
        'hydro': 40.0,
        'oil': 125.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 45.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2294.0,
        'gas': 4640.0,
        'hydro': 40.0,
        'oil': 43.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 31.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2063.0,
        'gas': 4629.0,
        'hydro': 40.0,
        'oil': 24.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 27.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 1979.0,
        'gas': 4458.0,
        'hydro': 40.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 30.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 1976.0,
        'gas': 4292.0,
        'hydro': 40.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 33.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 1973.0,
        'gas': 4236.0,
        'hydro': 40.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 33.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 1948.0,
        'gas': 4702.0,
        'hydro': 40.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 40.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2302.0,
        'gas': 4603.0,
        'hydro': 40.0,
        'oil': 99.0,
        'solar': 7.0,
        'unknown': 0.0,
        'wind': 38.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3037.0,
        'gas': 4374.0,
        'hydro': 40.0,
        'oil': 180.0,
        'solar': 111.0,
        'unknown': 0.0,
        'wind': 25.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3007.0,
        'gas': 4404.0,
        'hydro': 40.0,
        'oil': 296.0,
        'solar': 297.0,
        'unknown': 0.0,
        'wind': 16.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2859.0,
        'gas': 4247.0,
        'hydro': 40.0,
        'oil': 366.0,
        'solar': 450.0,
        'unknown': 0.0,
        'wind': 10.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2860.0,
        'gas': 4257.0,
        'hydro': 40.0,
        'oil': 362.0,
        'solar': 532.0,
        'unknown': 0.0,
        'wind': 8.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3102.0,
        'gas': 4606.0,
        'hydro': 40.0,
        'oil': 345.0,
        'solar': 532.0,
        'unknown': 0.0,
        'wind': 7.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3349.0,
        'gas': 4567.0,
        'hydro': 40.0,
        'oil': 399.0,
        'solar': 517.0,
        'unknown': 0.0,
        'wind': 4.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3382.0,
        'gas': 4196.0,
        'hydro': 40.0,
        'oil': 471.0,
        'solar': 431.0,
        'unknown': 0.0,
        'wind': 0.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3239.0,
        'gas': 4246.0,
        'hydro': 40.0,
        'oil': 472.0,
        'solar': 341.0,
        'unknown': 0.0,
        'wind': 6.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2883.0,
        'gas': 4349.0,
        'hydro': 40.0,
        'oil': 479.0,
        'solar': 155.0,
        'unknown': 0.0,
        'wind': 7.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3000.0,
        'gas': 4394.0,
        'hydro': 40.0,
        'oil': 530.0,
        'solar': 25.0,
        'unknown': 0.0,
        'wind': 4.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3349.0,
        'gas': 4697.0,
        'hydro': 40.0,
        'oil': 910.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 10.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3520.0,
        'gas': 4962.0,
        'hydro': 40.0,
        'oil': 673.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 12.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3557.0,
        'gas': 5245.0,
        'hydro': 40.0,
        'oil': 480.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 8.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3559.0,
        'gas': 5093.0,
        'hydro': 40.0,
        'oil': 576.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 8.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3491.0,
        'gas': 4903.0,
        'hydro': 40.0,
        'oil': 792.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 9.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3226.0,
        'gas': 4858.0,
        'hydro': 40.0,
        'oil': 505.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 8.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 15, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3193.0,
        'gas': 4822.0,
        'hydro': 40.0,
        'oil': 496.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 9.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
  ])
# ---
# name: test_fetch_production[target_datetime1]
  list([
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 0, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2139.0,
        'gas': 4489.0,
        'hydro': 26.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 20.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 1, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2131.0,
        'gas': 4311.0,
        'hydro': 26.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 18.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 2, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2105.0,
        'gas': 4021.0,
        'hydro': 26.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 21.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 3, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2103.0,
        'gas': 3843.0,
        'hydro': 26.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 29.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 4, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2045.0,
        'gas': 3768.0,
        'hydro': 26.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 31.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 5, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2126.0,
        'gas': 4131.0,
        'hydro': 26.0,
        'oil': 0.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 16.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 6, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2130.0,
        'gas': 4672.0,
        'hydro': 26.0,
        'oil': 15.0,
        'solar': 6.0,
        'unknown': 0.0,
        'wind': 11.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 7, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2531.0,
        'gas': 4756.0,
        'hydro': 26.0,
        'oil': 111.0,
        'solar': 65.0,
        'unknown': 0.0,
        'wind': 11.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 8, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3225.0,
        'gas': 4496.0,
        'hydro': 46.0,
        'oil': 163.0,
        'solar': 127.0,
        'unknown': 0.0,
        'wind': 3.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 9, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3407.0,
        'gas': 3780.0,
        'hydro': 46.0,
        'oil': 274.0,
        'solar': 206.0,
        'unknown': 0.0,
        'wind': 1.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 10, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3289.0,
        'gas': 3609.0,
        'hydro': 46.0,
        'oil': 347.0,
        'solar': 267.0,
        'unknown': 0.0,
        'wind': 2.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 11, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3297.0,
        'gas': 4078.0,
        'hydro': 46.0,
        'oil': 334.0,
        'solar': 288.0,
        'unknown': 0.0,
        'wind': 2.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 12, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3406.0,
        'gas': 4344.0,
        'hydro': 30.0,
        'oil': 261.0,
        'solar': 316.0,
        'unknown': 0.0,
        'wind': 6.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 13, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3142.0,
        'gas': 4120.0,
        'hydro': 26.0,
        'oil': 244.0,
        'solar': 304.0,
        'unknown': 0.0,
        'wind': 16.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 14, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2904.0,
        'gas': 4257.0,
        'hydro': 26.0,
        'oil': 285.0,
        'solar': 205.0,
        'unknown': 0.0,
        'wind': 7.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 15, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2765.0,
        'gas': 4267.0,
        'hydro': 30.0,
        'oil': 252.0,
        'solar': 90.0,
        'unknown': 0.0,
        'wind': 7.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 16, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3057.0,
        'gas': 3946.0,
        'hydro': 30.0,
        'oil': 635.0,
        'solar': 12.0,
        'unknown': 0.0,
        'wind': 3.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 17, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3364.0,
        'gas': 4307.0,
        'hydro': 40.0,
        'oil': 1256.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 8.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 18, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3615.0,
        'gas': 4422.0,
        'hydro': 40.0,
        'oil': 586.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 13.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 18, 30, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3630.0,
        'gas': 4371.0,
        'hydro': 40.0,
        'oil': 620.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 9.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 19, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3603.0,
        'gas': 4295.0,
        'hydro': 40.0,
        'oil': 587.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 7.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 20, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3626.0,
        'gas': 4228.0,
        'hydro': 40.0,
        'oil': 202.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 11.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 21, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3379.0,
        'gas': 4204.0,
        'hydro': 40.0,
        'oil': 88.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 18.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 22, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 3081.0,
        'gas': 4161.0,
        'hydro': 40.0,
        'oil': 62.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 19.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
    dict({
      'correctedModes': list([
      ]),
      'datetime': datetime.datetime(2025, 1, 1, 23, 0, tzinfo=zoneinfo.ZoneInfo(key='Asia/Dhaka')),
      'production': dict({
        'coal': 2847.0,
        'gas': 4132.0,
        'hydro': 40.0,
        'oil': 35.0,
        'solar': 0.0,
        'unknown': 0.0,
        'wind': 19.0,
      }),
      'source': 'erp.pgcb.gov.bd',
      'sourceType': <EventSourceType.measured: 'measured'>,
      'storage': dict({
      }),
      'zoneKey': 'BD',
    }),
  ])
# ---
